--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app"
-  },
-  "dependencies": {
-    "express": "3.0.4",
-    "jade": "*"
-  }
+    "name"         : "dovetail-dhe",
+    "version"      : "0.0.1",
+    "private"      : true,
+    "scripts"      : {
+        "start" : "node app"
+    },
+    "dependencies" : {
+        "express"    : "3.0.4",
+        "jade"       : "*",
+        "nodemailer" : "*",
+        "config"     : "*"
+    }
 }
